# crc-calculator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.rst  pyproject.toml  requirements-build.txt  requirements-dev.txt  tox.ini
.github/: release-drafter-config.yml
.github/workflows/: package-application.yml  python-publish.yml  release-drafter.yml
src/: __main__.spec
src/crc_calculator/: __init__.py  __main__.py  calculator.py  cli.py  parser.py  utils.py
tests/: test_parser.py
