[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "crc_calculator"
authors = [{name = "junghoon-vans", email = "junghoon.ban@gmail.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
dynamic = ["version", "description"]

[project.scripts]
crc = "crc_calculator.cli:main"

[project.urls]
Source = "https://github.com/junghoon-vans/crc-calculator"

[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.6.3"
tag_format = "v$version"
version_files = [
    "src/crc_calculator/__init__.py",
]
